--- a/D&D Encounter Tool/Base.lproj/Main.storyboard
+++ b/D&D Encounter Tool/Base.lproj/Main.storyboard
@@ -48,6 +48,10 @@
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lzH-Vl-fHJ">
                                 <rect key="frame" x="20" y="28" width="492" height="136"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="9pv-A4-QxB" id="gHp-47-ikj"/>
+                                    <outlet property="delegate" destination="9pv-A4-QxB" id="4g6-kf-Xg6"/>
+                                </connections>
                             </pickerView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3gb-S9-Cz9">
                                 <rect key="frame" x="520" y="66" width="108" height="30"/>
